Catalog.Api/Ingress/k8.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /mongodb/(.*) $1 break;
      rewrite /catalogapi/(.*) /$1 break;
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalog-items-service
                port:
                  number: 80
          - path: /catalogapi
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80
          - path: /mongodb
            pathType: Prefix
            backend:
              service:
                name: mongodb-service
                port:
                  number: 27017
